fix navbar misalignment

--- a/style.css
+++ b/style.css
@@ -126,7 +126,6 @@ header .container {
 
 header ul {
   padding: 0;
-  font-size: 16px;
   margin: 0;
   list-style: none;
   overflow: hidden;
